<?xml version="1.0"?>
    <package format="2">
    <name>dynamica</name>
    <version>1.0.0</version>
    <description>Allows persistent and dynamic reconfiguration of parameters in a JSON-like manner</description>

    <maintainer email="theNODO55@gmail.com">Noam Dori</maintainer>

    <license>BSD</license>

    <author email="theNODO55@gmail.com">Noam Dori</author>

    <buildtool_depend>catkin</buildtool_depend>
    <test_depend>rostest</test_depend>
    <test_depend>gmock</test_depend>

    <depend>roscpp</depend>
</package>
